User page (#88)
* working user page
